{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 15,
  "lineage": "d448f39c-92ba-8aef-911d-c42c79ba6d02",
  "resources": [
    {
      "module": "module.vpc_example_simple-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:internet-gateway/igw-02a28c04945293ffb",
            "id": "igw-02a28c04945293ffb",
            "owner_id": "568229488190",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02bccbdfacff03300"
          },
          "dependencies": [
            "module.vpc_example_simple-vpc.aws_vpc.this",
            "module.vpc_example_simple-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_simple-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02a28c04945293ffb",
            "id": "r-rtb-07c17e85e49cbaa951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07c17e85e49cbaa95",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_example_simple-vpc.aws_internet_gateway.this",
            "module.vpc_example_simple-vpc.aws_route_table.public",
            "module.vpc_example_simple-vpc.aws_vpc.this",
            "module.vpc_example_simple-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_simple-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:route-table/rtb-0042dd4f72f3620f1",
            "id": "rtb-0042dd4f72f3620f1",
            "owner_id": "568229488190",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bccbdfacff03300"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_example_simple-vpc.aws_vpc.this",
            "module.vpc_example_simple-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:route-table/rtb-02b4f3818cac2a616",
            "id": "rtb-02b4f3818cac2a616",
            "owner_id": "568229488190",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bccbdfacff03300"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_example_simple-vpc.aws_vpc.this",
            "module.vpc_example_simple-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_simple-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:route-table/rtb-07c17e85e49cbaa95",
            "id": "rtb-07c17e85e49cbaa95",
            "owner_id": "568229488190",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bccbdfacff03300"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_example_simple-vpc.aws_vpc.this",
            "module.vpc_example_simple-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_simple-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe66e3509daa4bf2",
            "route_table_id": "rtb-0042dd4f72f3620f1",
            "subnet_id": "subnet-052fbaf2edf6db9d2"
          },
          "dependencies": [
            "module.vpc_example_simple-vpc.aws_route_table.private",
            "module.vpc_example_simple-vpc.aws_subnet.private",
            "module.vpc_example_simple-vpc.aws_vpc.this",
            "module.vpc_example_simple-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0730b78570460e655",
            "route_table_id": "rtb-02b4f3818cac2a616",
            "subnet_id": "subnet-043a92af1544e10f3"
          },
          "dependencies": [
            "module.vpc_example_simple-vpc.aws_route_table.private",
            "module.vpc_example_simple-vpc.aws_subnet.private",
            "module.vpc_example_simple-vpc.aws_vpc.this",
            "module.vpc_example_simple-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_simple-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebd3b31b8739399d",
            "route_table_id": "rtb-07c17e85e49cbaa95",
            "subnet_id": "subnet-018ab9d930ef40733"
          },
          "dependencies": [
            "module.vpc_example_simple-vpc.aws_route_table.public",
            "module.vpc_example_simple-vpc.aws_subnet.public",
            "module.vpc_example_simple-vpc.aws_vpc.this",
            "module.vpc_example_simple-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eeb0cf8bd3ccad90",
            "route_table_id": "rtb-07c17e85e49cbaa95",
            "subnet_id": "subnet-0b4d3f3f9e5edcbbd"
          },
          "dependencies": [
            "module.vpc_example_simple-vpc.aws_route_table.public",
            "module.vpc_example_simple-vpc.aws_subnet.public",
            "module.vpc_example_simple-vpc.aws_vpc.this",
            "module.vpc_example_simple-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_simple-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:subnet/subnet-052fbaf2edf6db9d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "12.12.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052fbaf2edf6db9d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "568229488190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02bccbdfacff03300"
          },
          "dependencies": [
            "module.vpc_example_simple-vpc.aws_vpc.this",
            "module.vpc_example_simple-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:subnet/subnet-043a92af1544e10f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "12.12.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043a92af1544e10f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "568229488190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02bccbdfacff03300"
          },
          "dependencies": [
            "module.vpc_example_simple-vpc.aws_vpc.this",
            "module.vpc_example_simple-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_simple-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:subnet/subnet-018ab9d930ef40733",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "12.12.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018ab9d930ef40733",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "568229488190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02bccbdfacff03300"
          },
          "dependencies": [
            "module.vpc_example_simple-vpc.aws_vpc.this",
            "module.vpc_example_simple-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:subnet/subnet-0b4d3f3f9e5edcbbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "12.12.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4d3f3f9e5edcbbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "568229488190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02bccbdfacff03300"
          },
          "dependencies": [
            "module.vpc_example_simple-vpc.aws_vpc.this",
            "module.vpc_example_simple-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_example_simple-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:vpc/vpc-02bccbdfacff03300",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.12.0.0/16",
            "default_network_acl_id": "acl-097afd8cb9da189a4",
            "default_route_table_id": "rtb-01e3873006373cd39",
            "default_security_group_id": "sg-072d5082578f73e4c",
            "dhcp_options_id": "dopt-0615d90c9ceb2fbb2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02bccbdfacff03300",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e3873006373cd39",
            "owner_id": "568229488190",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}